packages/errors/test/__snapshots__/CONFIG_VALIDATION_ERROR - noFileType.ansi
[31mAn invalid configuration value was set.[39m
[31m[39m
[31mExpected [33mdefaultCommandTimeout[39m[31m to be a number.[39m
[31m[39m
[31mInstead the value was: [95mfalse[39m[31m[39m